save users to mongodb
