# app/docs/swagger.json
@@ -4,22 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/hello": {
-            "get": {
-                "tags": [
-                    "Test"
-                ],
-                "summary": "Hello simple request returns \"Hello world\"",
-                "responses": {
-                    "200": {
-                        "description": "Hello World!!!"
-                    },
-                    "400": {
-                        "description": ""
-                    }
-                }
-            }
-        },
         "/users": {
             "get": {
                 "tags": [
